[gd_scene load_steps=4 format=3 uid="uid://d0ehj5jr6elq0"]

[ext_resource type="Script" path="res://MainMenu/bgm_scene.gd" id="1_2i6x8"]

[sub_resource type="AudioStreamMP3" id="AudioStreamMP3_vah5u"]
loop = true

[sub_resource type="AudioStreamMP3" id="AudioStreamMP3_hkdm6"]
loop = true

[node name="BGMScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2i6x8")

[node name="VoiceButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1728.0
offset_top = 139.0
offset_right = 1813.0
offset_bottom = 222.0
text = "Voice"

[node name="BGMButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1729.0
offset_top = 43.0
offset_right = 1814.0
offset_bottom = 126.0
text = "BGM"

[node name="BGMBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 1808.0
offset_top = 24.0
offset_right = 1832.0
offset_bottom = 48.0
scale = Vector2(5, 5)
button_pressed = true
button_mask = 0

[node name="VoiceBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 1804.0
offset_top = 121.0
offset_right = 1828.0
offset_bottom = 145.0
scale = Vector2(5, 5)
button_pressed = true
button_mask = 0

[node name="InstrumentalStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMP3_vah5u")

[node name="VoiceStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMP3_hkdm6")

[connection signal="pressed" from="VoiceButton" to="." method="_on_voice_button_pressed"]
[connection signal="pressed" from="BGMButton" to="." method="_on_bgm_button_pressed"]
